--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                           <td>11:30</td>
                           <td><a href="https://unitn.zoom.us/j/83480835572">Link</a> (176999)</td>
                           <td>Video</td>
-                          <td>Slides</td>
+                          <td> - </td>
                           <td>Students Q/A</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
                         </tr>
@@ -413,9 +413,9 @@
                           <td>L8</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
-                          <td>Link</td>
+                          <td><a href="https://unitn.zoom.us/j/84874494766">Link</a> (170103)</td>
                           <td>Video</td>
-                          <td>Slides</td>
+                          <td> - </td>
                           <td>Groups: project plan discussion.</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
                         </tr>
