L15 changed Bona in Ronald

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                           <td>Video</td>
                           <td>Slides</td>
                           <td>The recruitment; Field supervising; Ethical & GDPR aspects.</td>
-                          <td>R. Bona</td>
+                          <td>Ronald Chenu Abente Acosta</td>
                         </tr>
                         <tr>
                           <th scope="row">12 Nov, 2020</th>
