--- a/index.html
+++ b/index.html
@@ -535,8 +535,8 @@
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td> - </td>
                           <td> - </td>
-                          <td>Video</td>
-                          <td>Slides</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=679841">Video</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1BwnDNffgiVLS1L7Per8GJYQXYq9zAPQY/view?usp=sharing">Slides</a></td>
                           <td>Data platforms for big data.</td>
                           <td>M. Zeni</td>
                         </tr>
