--- a/index.html
+++ b/index.html
@@ -455,20 +455,20 @@
                         <tr>
                           <th scope="row">26 Oct, 2020</th>
                           <td>L11</td>
-                          <td style="text-align: center;"><span class="label label-warning">?</span></td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
-                          <td> ? </td>
+                          <td><a href="https://unitn.zoom.us/j/85410267623">Link</a> (668823)</td>
                           <td>Video</td>
-                          <td>Slides</td>
+                          <td>Slides</td> 
                           <td>Sample design, sampling, and Field Experiment.</td>
                           <td>I. Bison</td>
                         </tr>
                         <tr>
                           <th scope="row">29 Oct, 2020</th>
                           <td>L12</td>
-                          <td style="text-align: center;"><span class="label label-warning">?</span></td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
-                          <td> ? </td>
+                          <td> Link </td>
                           <td>Video</td>
                           <td>Slides</td>
                           <td>Sample design, sampling, and Field Experiment; The timing (frequencies) of data collection.</td>
