Link added to L12

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                           <td>L12</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
-                          <td> Link </td>
+                          <td><a href="https://unitn.zoom.us/j/85024993364">Link</a> (680019)</td>
                           <td>Video</td>
                           <td>Slides</td>
                           <td>Sample design, sampling, and Field Experiment; The timing (frequencies) of data collection.</td>
