Added links to L13 and L14

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                           <td>L13</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
-                          <td>Link</td>
+                          <td><a href="https://unitn.zoom.us/j/87497647486">Link</a> (857461)</td>
                           <td>Video</td>
                           <td>Slides</td>
                           <td>Groups: data collection architecture.</td>
@@ -501,7 +501,7 @@
                           <td>L14</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
-                          <td>Link</td>
+                          <td><a href="https://unitn.zoom.us/j/85348074781">Link</a> (957652)</td>
                           <td>Video</td>
                           <td>Slides</td>
                           <td>Groups: data collection architecture.</td>
