--- a/index.html
+++ b/index.html
@@ -107,6 +107,22 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-2">
+                    <p>Website updated!</p>
+                </div>
+                <div class="col-lg-4">
+                    <p style="font-size:110%;">November 1st, 2020 07:40</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-lg-offset-2">
+                    <p>&nbsp;</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-lg-offset-2">
                     <p>Website online!</p>
                 </div>
                 <div class="col-lg-4">
@@ -147,7 +163,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="font-size:110%;">Last modification: September 21st, 2020 14:48</p>
+                    <p style="font-size:110%;">Last modification: November 1st, 2020 07:40</p>
                 </div>
             </div>
         </div>
@@ -458,8 +474,8 @@
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td><a href="https://unitn.zoom.us/j/85410267623">Link</a> (668823)</td>
-                          <td>Video</td>
-                          <td>Slides</td> 
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=692181">Video</a></td>
+                          <td><a target="_blank" href="">Slides</a></td>
                           <td>Sample design, sampling, and Field Experiment.</td>
                           <td>I. Bison</td>
                         </tr>
@@ -469,8 +485,8 @@
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td><a href="https://unitn.zoom.us/j/85024993364">Link</a> (680019)</td>
-                          <td>Video</td>
-                          <td>Slides</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=697349">Video</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1ST7MdeyZJBRzcHQw-MjxBpOkH82tkNzX/view?usp=sharing">Slides</a></td>
                           <td>Sample design, sampling, and Field Experiment; The timing (frequencies) of data collection.</td>
                           <td>I. Bison</td>
                         </tr>
