--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                           <td>11:30</td>
                           <td><a href="https://unitn.zoom.us/j/85410267623">Link</a> (668823)</td>
                           <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=692181">Video</a></td>
-                          <td><a target="_blank" href="">Slides</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1aJ01k-yr2KeeaL_-D4mXQ1pLfe72E5HZ/view?usp=sharing">Slides</a></td>
                           <td>Sample design, sampling, and Field Experiment.</td>
                           <td>I. Bison</td>
                         </tr>
