--- a/index.html
+++ b/index.html
@@ -584,8 +584,8 @@
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td> - </td>
                           <td> - </td>
-                          <td>Video</td>
-                          <td>Slides</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=701165">Video</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1cBgg3a2bhffVAu5Q3k85ZrsB5OplLJoo/view?usp=sharing">Slides</a></td>
                           <td>Data cleaning and methods for data preparation.</td>
                           <td>M. Zeni</td>
                         </tr>
