Added videos for L4, L5 and L8

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                           <td rowspan="2" style="text-align: center;"><span class="label label-danger">Sync</span></td>     
                           <td rowspan="2">11:30</td> 
                           <td rowspan="2"><a href="https://unitn.zoom.us/j/98389682990">Link</a> (491859)</td>            
-                          <td rowspan="2">Video</td>
+                          <td rowspan="2"><a href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=652845">Video</a></td>
                           <td>Slides</td>
                           <td>Why Human Behaviour? Why diversity? From a sociological perspective.</td>
                           <td>I. Bison</td>
@@ -380,8 +380,8 @@
                           <td rowspan="2">L5</td>
                           <td rowspan="2" style="text-align: center;"><span class="label label-danger">Sync</span></td>     
                           <td rowspan="2">11:30</td> 
-                          <td rowspan="2"><a href="https://unitn.zoom.us/j/88475311632">Link</a> (181624)</td>               
-                          <td rowspan="2">Video</td>
+                          <td rowspan="2"><a href="https://unitn.zoom.us/j/88475311632">Link</a> (181624)</td> 
+                          <td rowspan="2"><a href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=652873">Video</a></td>
                           <td>Slides</td>
                           <td>Active data: Questionnaire for synchronic and diachronic data & Type of social data.</td>
                           <td>I. Bison</td>
@@ -430,7 +430,7 @@
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td><a href="https://unitn.zoom.us/j/84874494766">Link</a> (170103)</td>
-                          <td>Video</td>
+                          <td><a href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=679221">Video</a></td>
                           <td> - </td>
                           <td>Groups: project plan discussion.</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
