Added link video L15

--- a/index.html
+++ b/index.html
@@ -537,9 +537,9 @@
                         <tr>
                           <th scope="row">9 Nov, 2020</th>
                           <td>L15</td>
-                          <td style="text-align: center;"><span class="label label-warning">?</span></td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
-                          <td> ? </td>
+                          <td><a href="https://unitn.zoom.us/j/89758766065">Link</a> (327999)</td>
                           <td>Video</td>
                           <td>Slides</td>
                           <td>The recruitment; Field supervising; Ethical & GDPR aspects.</td>
