--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                           <td>M. Zeni</td>
                         </tr>
                         <tr>
-                          <th scope="row">15 Nov, 2020</th>
+                          <th scope="row">16 Nov, 2020</th>
                           <td>L17</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
@@ -606,8 +606,8 @@
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td> - </td>
                           <td> - </td>
-                          <td>Video</td>
-                          <td>Slides</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=726785">Video</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/139GfxDkO-5dXiBRgStUk7YSCqglzN12K/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1QS5WomT9yp837cfdiiN9qbHwSGLOrfFb?usp=sharing">Material</a></td>
                           <td>Sensor data analysis.</td>
                           <td>M. Zeni</td>
                         </tr>
