--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td><a href="https://unitn.zoom.us/j/87497647486">Link</a> (857461)</td>
-                          <td>Video</td>
-                          <td>Slides</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=721873">Video</a></td>
+                          <td> - </td>
                           <td>Groups: data collection architecture.</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
                         </tr>
@@ -518,10 +518,21 @@
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td><a href="https://unitn.zoom.us/j/85348074781">Link</a> (957652)</td>
-                          <td>Video</td>
-                          <td>Slides</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=721889">Video</a></td>
+                          <td> - </td>
                           <td>Groups: data collection architecture.</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">9 Nov, 2020</th>
+                          <td>L15</td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
+                          <td>11:30</td>
+                          <td><a href="https://unitn.zoom.us/j/89758766065">Link</a> (327999)</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=721913">Video 1</a>, <a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=721941">Video 2</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1JKHqnH4eTQgsT3ei-L0Tiygeq286YU1j/view?usp=sharing">Slides</a></td>
+                          <td>The recruitment; Field supervising; Ethical & GDPR aspects.</td>
+                          <td>Ronald Chenu Abente Acosta</td>
                         </tr>
                         <tr style="background-color: lightblue">
                           <th scope="row">9 Nov, 2020</th>
@@ -533,17 +544,6 @@
                           <td> - </td>
                           <td>Limesurvey data collection ends.</td>
                           <td> - </td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9 Nov, 2020</th>
-                          <td>L15</td>
-                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
-                          <td>11:30</td>
-                          <td><a href="https://unitn.zoom.us/j/89758766065">Link</a> (327999)</td>
-                          <td>Video</td>
-                          <td>Slides</td>
-                          <td>The recruitment; Field supervising; Ethical & GDPR aspects.</td>
-                          <td>Ronald Chenu Abente Acosta</td>
                         </tr>
                         <tr>
                           <th scope="row">12 Nov, 2020</th>
