--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p>Website updated!</p>
                 </div>
                 <div class="col-lg-4">
-                    <p style="font-size:110%;">November 3rd, 2020 08:50</p>
+                    <p style="font-size:110%;">November 15th, 2020 11:12</p>
                 </div>
             </div>
             <div class="row">
@@ -651,7 +651,7 @@
                           <td>11:30</td>
                           <td>Link</td>
                           <td>Video</td>
-                          <td>Slides</td>
+                          <td> - </td>
                           <td>Final groups presentations</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
                         </tr>
@@ -662,7 +662,7 @@
                           <td>11:30</td>
                           <td>Link</td>
                           <td>Video</td>
-                          <td>Slides</td>
+                          <td> - </td>
                           <td>Final groups presentations</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
                         </tr>
