--- a/index.html
+++ b/index.html
@@ -557,15 +557,24 @@
                           <td>M. Zeni</td>
                         </tr>
                         <tr>
-                          <th scope="row">16 Nov, 2020</th>
-                          <td>L17</td>
-                          <td style="text-align: center;"><span class="label label-warning">?</span></td>
-                          <td>11:30</td>
-                          <td> ? </td>
+                          <th scope="row" rowspan="2">16 Nov, 2020</th>
+                          <td rowspan="2">L17</td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>     
+                          <td>11:30</td> 
+                          <td><a href="https://unitn.zoom.us/j/89566130646">Link</a> (253851)</td> 
                           <td>Video</td>
                           <td>Slides</td>
                           <td>Data Cleaning and Methods for Data preparation.</td>
-                          <td>I. Bison, M. Busso</td>
+                          <td>I. Bison</td>
+                        </tr>
+                        <tr>            
+                          <td style="text-align: center;"><span class="label label-info">Async</span></td>  
+                          <td> - </td>
+                          <td> - </td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=727541">Video</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1gI_VNLN8XdNwM_UAMdPMMF_DZHdz3ijP/view?usp=sharing">Slides</a></td>
+                          <td>Data Cleaning and Methods for Data preparation.</td>
+                          <td>M. Busso</td>
                         </tr>
                         <tr style="background-color: lightblue">
                           <th scope="row">16 Nov, 2020</th>
