--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="font-size:110%;">Last modification: November 3rd, 2020 08:50</p>
+                    <p style="font-size:110%;">Last modification: November 23rd, 2020 08:50</p>
                 </div>
             </div>
         </div>
@@ -601,9 +601,9 @@
                         <tr>
                           <th scope="row">23 Nov, 2020</th>
                           <td>L19</td>
-                          <td style="text-align: center;"><span class="label label-warning">?</span></td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td> 
                           <td>11:30</td>
-                          <td> ? </td>
+                          <td><a href="https://unitn.zoom.us/j/88064520962">Link</a> (506772)</td>
                           <td>Video</td>
                           <td>Slides</td>
                           <td>Synchronic and Diachronic statistical models.</td>
