--- a/index.html
+++ b/index.html
@@ -562,8 +562,8 @@
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>     
                           <td>11:30</td> 
                           <td><a href="https://unitn.zoom.us/j/89566130646">Link</a> (253851)</td> 
-                          <td>Video</td>
-                          <td>Slides</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=734913">Video</a></td>
+                          <td><a>Slides</a></td>
                           <td>Data Cleaning and Methods for Data preparation.</td>
                           <td>I. Bison</td>
                         </tr>
@@ -604,8 +604,8 @@
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td> 
                           <td>11:30</td>
                           <td><a href="https://unitn.zoom.us/j/88064520962">Link</a> (506772)</td>
-                          <td>Video</td>
-                          <td>Slides</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=746397">Video</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/18o2PPHqP-63DDR5udXKBSf53QC92VaO-/view?usp=sharing">Slides</a></td>
                           <td>Synchronic and Diachronic statistical models.</td>
                           <td>I. Bison</td>
                         </tr>
