--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                           <td>L23</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
-                          <td>Link</td>
+                          <td><a href="https://unitn.zoom.us/j/85673111904">Link</a> (292050)</td>
                           <td>Video</td>
                           <td> - </td>
                           <td>Final groups presentations</td>
