--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                           <td>L24</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
-                          <td>Link</td>
+                          <td><a href="https://unitn.zoom.us/j/84045852206">Link</a> (699977)</td>
                           <td>Video</td>
                           <td> - </td>
                           <td>Final groups presentations</td>
