--- a/index.html
+++ b/index.html
@@ -637,8 +637,8 @@
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
                           <td> ? </td>
-                          <td>Video</td>
-                          <td>Slides</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=762885">Video</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1iOC_Qg7sabrn1KjrhHu8QTQz3NgGxlex/view?usp=sharing">Slides</a></td>
                           <td>Network models.</td>
                           <td>I. Bison</td>
                         </tr>
