--- a/index.html
+++ b/index.html
@@ -107,6 +107,27 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-2">
+                    <p>The 2020's version of the course is over!</p>
+                </div>
+                <div class="col-lg-4">
+                    <p style="font-size:110%;">December 14th, 2020 15:50</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <img src="img/group.png" class="img-responsive" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-lg-offset-2">
+                    <p>&nbsp;</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-lg-offset-2">
                     <p>Website updated!</p>
                 </div>
                 <div class="col-lg-4">
@@ -163,7 +184,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="font-size:110%;">Last modification: November 23rd, 2020 08:50</p>
+                    <p style="font-size:110%;">Last modification: December 14th, 2020 15:50</p>
                 </div>
             </div>
         </div>
@@ -797,6 +818,56 @@
                     <p>The slots when the paper has to be presented are highlithed in the <a href="#calendar">calendar</a>.</p>
                     <p>&nbsp;</p>
                     <p><b>IMPORTANT</b>: You must register to ESSE3 in order to take part to the written exam. The registration (mandatory) concludes the exam.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <table class="table table-bordered table-responsive">
+                      <thead>
+                        <tr>
+                          <th scope="col">Team #</th>
+                          <th scope="col">Members</th>
+                          <th scope="col">Title</th>
+                          <th scope="col">Presentation date</th>
+                          <th scope="col">Paper</th>
+                          <th scope="col">Slides</th>
+                          <th scope="col">Video</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Team 1</td>
+                          <td>A, B, C</td>
+                          <td>Research title</td>     
+                          <td>11 Dec, 2020</td>  
+                          <td>Paper</td>
+                          <td>Slides</td>
+                          <td>Video</td>
+                        </tr>
+                        <tr>
+                          <td>Team 2</td>
+                          <td>A, B, C</td>
+                          <td>Research title</td>     
+                          <td>14 Dec, 2020</td>  
+                          <td>Paper</td>
+                          <td>Slides</td>
+                          <td rowspan="2">Video</td>
+                        </tr>
+                        <tr>
+                          <td>Team 2</td>
+                          <td>A, B, C</td>
+                          <td>Research title</td>     
+                          <td>14 Dec, 2020</td>  
+                          <td>Paper</td>
+                          <td>Slides</td>
+                        </tr>
+                      </tbody>
+                    </table>
                 </div>
             </div>
         </div>
