--- a/index.html
+++ b/index.html
@@ -841,8 +841,8 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <td>Team 1</td>
-                          <td>A, B, C</td>
+                          <td>Group 1</td>
+                          <td>Marta Fattorel, Eric Solinas, Isabella Dario</td>
                           <td>Research title</td>     
                           <td>11 Dec, 2020</td>  
                           <td>Paper</td>
@@ -850,8 +850,8 @@
                           <td>Video</td>
                         </tr>
                         <tr>
-                          <td>Team 2</td>
-                          <td>A, B, C</td>
+                          <td>Group 2</td>
+                          <td>Shaun Mcnaughton, Javier Pena Roncero, Beatrice Olivari, Xiaoyue Li</td>
                           <td>Research title</td>     
                           <td>14 Dec, 2020</td>  
                           <td>Paper</td>
@@ -859,8 +859,8 @@
                           <td rowspan="2">Video</td>
                         </tr>
                         <tr>
-                          <td>Team 2</td>
-                          <td>A, B, C</td>
+                          <td>Group 2</td>
+                          <td>Marco Tonin, Danis Nikolas Griffith, Haonan Zhao</td>
                           <td>Research title</td>     
                           <td>14 Dec, 2020</td>  
                           <td>Paper</td>
