--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td><a href="https://unitn.zoom.us/j/85673111904">Link</a> (292050)</td>
-                          <td>Video</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=776105">Video</a></td>
                           <td> - </td>
                           <td>Final groups presentations</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
@@ -691,7 +691,7 @@
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
                           <td><a href="https://unitn.zoom.us/j/84045852206">Link</a> (699977)</td>
-                          <td>Video</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=776109">Video</a></td>
                           <td> - </td>
                           <td>Final groups presentations</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
