--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
                           <td>11 Dec, 2020</td>  
                           <td>Paper</td>
                           <td>Slides</td>
-                          <td>Video</td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=776105">Video</a></td>
                         </tr>
                         <tr>
                           <td>Group 2</td>
@@ -856,7 +856,7 @@
                           <td>14 Dec, 2020</td>  
                           <td>Paper</td>
                           <td>Slides</td>
-                          <td rowspan="2">Video</td>
+                          <td rowspan="2"><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=776109">Video</a></td>
                         </tr>
                         <tr>
                           <td>Group 3</td>
