--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <p>This class will start on Monday September 20th. </p>
                 </div>
                 <div class="col-lg-4">
-                    <p style="font-size:110%;">September 15th, 2021 17:30</p>
+                    <p style="font-size:110%;">September 19th, 2021 16:30</p>
                 </div>
             </div>
             <div class="row">
@@ -155,7 +155,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="font-size:110%;">Last modification: September 15th, 2021 17:30</p>
+                    <p style="font-size:110%;">Last modification: September 19th, 2021 17:30</p>
                 </div>
             </div>
         </div>
@@ -172,6 +172,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
+                    <p>The Fall 2021 Edition of the course Studies on Human Behaviour is delivered in the classrooms. We will also provide some complementary asynchonous material</p>
+                    <p>&nbsp;</p>
+                    <p>The idea behind this course is that the students do most of the work during the course duration (up to December) because we believe this should yield considerably better results.</p>
                     <!--
                     <p>The Fall 2021 Edition of the course Studies on Human Behaviour is delivered remotely, due to the current circumstances. The format is mixed, with some lessons delivered synchronously and some asynchronously. You will find <span class="label label-danger">Sync</span> and <span class="label label-info">Async</span> tags in each lesson in the calendar.</p>
                     <p>&nbsp;</p>
@@ -209,14 +212,15 @@
                 <div class="col-lg-12">
                     <p>The course runs from September 20, 2021 till December 13, 2021 with the following schedule:</p>
                     <ul>
-                    <li><p>Mondays, time TBD</p></li>
-                    <li><p>Wednesday, time TBD</p></li>
+                    <li><p>Mondays, time 11:00 - 13:00 (laboratory 3)</p></li>
+                    <li><p>Wednesday, time 14:00 - 16:00 (laboratory 13)</p></li>
                     </ul>
                     <p>&nbsp;</p>
-                    <!--
+
                     <p>
                     Always check the official University calendar on Moodle.
                     </p>
+                    <!--
                     <p>&nbsp;</p>
                     <p>The Zoom link for the video conference available on the Moodle platform at the University of Trento.</p>
                     -->
@@ -295,25 +299,25 @@
                           <th scope="row" rowspan="4">20 Sep, 2021</th>
                           <td rowspan="4">L1</td>
                           <td rowspan="4" style="text-align: center;"><span class="label label-danger">Sync</span></td>     
-                          <td rowspan="4"> - </td>
-                          <td rowspan="4"><a href="https://unitn.zoom.us/j/95686754582">Link</a> (505435)</td>
-                          <td rowspan="4"><a href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=617709">Video</a></td>
-                          <td><a target="_blank" href="https://drive.google.com/file/d/1ANho7FpSPuQTIIh__bmk-f-gLt97hX3O/view?usp=sharing">Slides</a></td>
+                          <td rowspan="4"> 11:00 </td>
+                          <td rowspan="4"><!--<a href="https://unitn.zoom.us/j/95686754582">Link</a> (505435)--></td>
+                          <td rowspan="4"><!--<a href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=617709">Video</a>--></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1u0Tu01q81zKeJckaUFVx3KVWSPkFb2a2/view?usp=sharing">Slides</a></td>
                           <td>Course Introduction.</td>
                           <td>I. Bison</td>
                         </tr>
                         <tr>
-                          <td><a target="_blank" href="https://drive.google.com/file/d/12f_QQuel7Y2eAJTVLPHIjimyLIrekbaS/view?usp=sharing">Slides</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1XsXpWRwv4uwfjZVS-gInsmElG8TOUkD3/view?usp=sharing">Slides</a></td>
                           <td>Course Introduction. Projects organization.</td>
                           <td>F. Giunchiglia</td>
                         </tr>
                         <tr>
-                          <td><a target="_blank" href="https://drive.google.com/file/d/1OMLhk9siybd5SktjoxbIK6dn4gje06ex/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1RfYxF6mnK4-sjKP0WIdmkiYPPeu2zccX?usp=sharing">Material</a></td>
+                          <td><!--<a target="_blank" href="https://drive.google.com/file/d/1OMLhk9siybd5SktjoxbIK6dn4gje06ex/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1RfYxF6mnK4-sjKP0WIdmkiYPPeu2zccX?usp=sharing">Material</a>--></td>
                           <td>Course Introduction. Planning a project.</td>
                           <td>M. Chierici</td>
                         </tr>
                         <tr> 
-                          <td><a target="_blank" href="https://drive.google.com/file/d/1pLjUGawUhP385iJiX5p9uLaEIvjSbbcg/view?usp=sharing">Slides</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1KoAsqFE35LBOUpvfjhUwlI8gaW_CIGHe/view?usp=sharing">Slides</a></td>
                           <td>Course Introduction. Technical bits.</td>
                           <td>M. Rodas</td>
                         </tr>
@@ -321,7 +325,7 @@
                           <th scope="row" rowspan="2">22 Sep, 2021</th>
                           <td rowspan="2">L2</td>
                           <td rowspan="2" style="text-align: center;"><span class="label label-danger">Sync</span></td>     
-                          <td>11:30</td>  
+                          <td>14:00</td>
                           <td rowspan="2"><a href="https://unitn.zoom.us/j/98957826621">Link</a> (416928)</td>
                           <td rowspan="2"><a href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=627897">Video</a></td>
                           <td><a target="_blank" href="https://drive.google.com/file/d/19nbR_jqhVahN8jf497r8sjB2w8BseQ_G/view?usp=sharing">Slides</a></td>
@@ -329,7 +333,7 @@
                           <td>I. Bison</td>
                         </tr>
                         <tr>
-                          <td>12:30</td>   
+                          <td>15:00</td>
                           <td><a target="_blank" href="https://drive.google.com/file/d/1Cosn9bDQTrGa9L093yRri7z-_oIfA5wH/view?usp=sharing">Slides</a></td>
                           <td>Theory driven vs. Data driven vs. Knowledge Driven</td>
                           <td>F. Giunchiglia</td>
@@ -767,6 +771,12 @@
                     </a>
                     <p style="text-align: center; margin-top:0.3cm;">Dr. Marcelo Rodas Britez</p>
                 </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a class="portfolio-link" data-toggle="modal">
+                        <img src="img/marco.png" class="img-responsive" alt="">
+                    </a>
+                    <p style="text-align: center; margin-top:0.3cm;">Dr. Marco Chierici</p>
+                </div>
             </div>
         </div>
     </section>
@@ -839,10 +849,9 @@
                     <p>Multiple positions are available as 150h and internships. They should be considered as the first part of a research project and thesis with the Knowdive group. The general activities of the group are listed on the website (<b><a style="color:white" href="http://knowdive.disi.unitn.it/">http://knowdive.disi.unitn.it/</a></b>), while activities already scheduled and available now can be found at <b><a style="color:white" href="http://knowdive.disi.unitn.it/work-with-us/">http://knowdive.disi.unitn.it/work-with-us/</a></b>. The 150h activities have variable length and are strictly related to software development: for this reason, knowledge of software development with at least onr programming language is a must. All the activities can also be carried on in a remote fashion.</p>
                     <p>&nbsp;</p>
                     <p>Anyone interested in these opportunities can send an email to <b><a style="color:white" href="mailto:knowdive-positions@disi.unitn.it">knowdive-positions@disi.unitn.it</a></b>, providing already information about preferences in terms of topics or activities (if known). For 150h activities it is important to provide information about known programming languages with the corresponding level, a value in the range [1 - 5] where 1= basic knowledge, 5= advanced knowledge.</p>
-                    <!--
                     <p>The applications to the “150 ore” program can be done at the link: <b><a style="color:white" href="https://www.unitn.it/servizi/224/collaborazioni-studenti-150-ore">https://www.unitn.it/servizi/224/collaborazioni-studenti-150-ore</a></b>
                     Notice that  the deadline for applications for the A.Y 2021-2022 is September 30, 2021</p>
-                    -->
+
                 </div>
             </div>
         </div>
