fixing class style.

--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
                     </a>
                     <p style="text-align: center; margin-top:0.3cm;">Prof. Fausto Giunchiglia</p>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 portfolio-item col-lg-offset-2">
                     <a class="portfolio-link" data-toggle="modal">
                         <img src="img/marcelo.png" class="img-responsive" alt="">
                     </a>
