--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                           <th scope="row" rowspan="2">29 Sep, 2021</th>
                           <td rowspan="2">L4</td>
                           <td rowspan="2" style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td rowspan="2">11:00</td>
+                          <td rowspan="2">14:00</td>
                           <td rowspan="2"></td>
                           <td rowspan="2"><!--<a href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=652845">Video</a>--></td>
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/1cy942dsFJTE2b57b6pvzjj9tz3kOerbv/view?usp=sharing">Slides</a>--></td>
@@ -395,9 +395,9 @@
                           <th scope="row">6 Oct, 2021</th>
                           <td>L6</td>
                           <td style="text-align: center;"><!--<span class="label label-info">Async</span>--></td>
+                          <td> 14:00 </td>
                           <td> - </td>
-                          <td> - </td>
-                          <td><<!--a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=644633">Video</a>--></td>
+                          <td><!--a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=644633">Video</a>--></td>
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/1Ck-rmU6huYRZNWtRXmRbvMOxKTCkL6y5/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/file/d/1MH5CWfw6BKebQhysOcd9Q1ebnjsW4hWA/view?usp=sharing">i-Log video</a>--></td>
                           <td>Methods and tools for data collection. Passive data: smartphones or other devices.</td>
                           <td>M. Rodas</td>
@@ -428,7 +428,7 @@
                           <th scope="row">13 Oct, 2021</th>
                           <td>L8</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:00</td>
+                          <td>14:00</td>
                           <td></td>
                           <td><!--<a href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=679221">Video</a>--></td>
                           <td> - </td>
@@ -483,7 +483,7 @@
                           <th scope="row">27 Oct, 2021</th>
                           <td>L12</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:00</td>
+                          <td>14:00</td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=697349">Video</a>--></td>
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/1ST7MdeyZJBRzcHQw-MjxBpOkH82tkNzX/view?usp=sharing">Slides</a>--></td>
@@ -517,7 +517,7 @@
                           <th scope="row">8 Nov, 2021</th>
                           <td>L14</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:00</td>
+                          <td>14:00</td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=721889">Video</a>--></td>
                           <td> - </td>
@@ -639,7 +639,7 @@
                           <th scope="row">6 Dec, 2021</th>
                           <td>L22</td>
                           <td style="text-align: center;"><span class="label label-warning"></span></td>
-                          <td>11:00</td>
+                          <td>14:00</td>
                           <td> ? </td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=762885">Video</a>--></td>
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/1iOC_Qg7sabrn1KjrhHu8QTQz3NgGxlex/view?usp=sharing">Slides</a>--></td>
