--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                 <div class="col-lg-12">
                     <p>The course runs from September 20, 2021 till December 13, 2021 with the following schedule:</p>
                     <ul>
-                    <li><p>Mondays, time 11:00 - 13:00 (laboratory 3)</p></li>
-                    <li><p>Wednesday, time 14:00 - 16:00 (laboratory 13)</p></li>
+                    <li><p>Mondays, time 11:15 - 13:00 (Classroom 10)</p></li>
+                    <li><p>Wednesday, time 14:15 - 16:00 (Classroom 11)</p></li>
                     </ul>
                     <p>&nbsp;</p>
 
@@ -299,7 +299,7 @@
                           <th scope="row" rowspan="4">20 Sep, 2021</th>
                           <td rowspan="4">L1</td>
                           <td rowspan="4" style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td rowspan="4"> 11:00 </td>
+                          <td rowspan="4"> 11:15 </td>
                           <td rowspan="4"><!--<a href="https://unitn.zoom.us/j/95686754582">Link</a> (505435)--></td>
                           <td rowspan="4"><!--<a href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=617709">Video</a>--></td>
                           <td><a target="_blank" href="https://drive.google.com/file/d/1u0Tu01q81zKeJckaUFVx3KVWSPkFb2a2/view?usp=sharing">Slides</a></td>
@@ -325,7 +325,7 @@
                           <th scope="row" rowspan="2">22 Sep, 2021</th>
                           <td rowspan="2">L2</td>
                           <td rowspan="2" style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>14:00</td>
+                          <td>14:15</td>
                           <td rowspan="2"></td>
                           <td rowspan="2"><!--<a href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=627897">Video</a>--></td>
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/19nbR_jqhVahN8jf497r8sjB2w8BseQ_G/view?usp=sharing">Slides</a>--></td>
@@ -363,7 +363,7 @@
                           <th scope="row" rowspan="2">29 Sep, 2021</th>
                           <td rowspan="2">L4</td>
                           <td rowspan="2" style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td rowspan="2">14:00</td>
+                          <td rowspan="2">14:15</td>
                           <td rowspan="2"></td>
                           <td rowspan="2"><!--<a href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=652845">Video</a>--></td>
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/1cy942dsFJTE2b57b6pvzjj9tz3kOerbv/view?usp=sharing">Slides</a>--></td>
@@ -379,7 +379,7 @@
                           <th scope="row" rowspan="2">4 Oct, 2021</th>
                           <td rowspan="2">L5</td>
                           <td rowspan="2" style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td rowspan="2">11:00</td>
+                          <td rowspan="2">11:15</td>
                           <td rowspan="2"></td>
                           <td rowspan="2"><!--<a href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=652873">Video</a>--></td>
                           <td><!--<a href="https://drive.google.com/file/d/1QyDtp-98zdMLYOsp9YKIqhAVhZ0Wq_yl/view?usp=sharing">Slides</a>--></td>
@@ -395,7 +395,7 @@
                           <th scope="row">6 Oct, 2021</th>
                           <td>L6</td>
                           <td style="text-align: center;"><!--<span class="label label-info">Async</span>--></td>
-                          <td> 14:00 </td>
+                          <td> 14:15 </td>
                           <td> - </td>
                           <td><!--a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=644633">Video</a>--></td>
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/1Ck-rmU6huYRZNWtRXmRbvMOxKTCkL6y5/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/file/d/1MH5CWfw6BKebQhysOcd9Q1ebnjsW4hWA/view?usp=sharing">i-Log video</a>--></td>
@@ -417,7 +417,7 @@
                           <th scope="row">11 Oct, 2021</th>
                           <td>L7</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:00</td>
+                          <td>11:15</td>
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
@@ -428,7 +428,7 @@
                           <th scope="row">13 Oct, 2021</th>
                           <td>L8</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>14:00</td>
+                          <td>14:15</td>
                           <td></td>
                           <td><!--<a href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=679221">Video</a>--></td>
                           <td> - </td>
@@ -472,7 +472,7 @@
                           <th scope="row">25 Oct, 2021</th>
                           <td>L11</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:00</td>
+                          <td>11:15</td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=692181">Video</a>--></td>
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/1aJ01k-yr2KeeaL_-D4mXQ1pLfe72E5HZ/view?usp=sharing">Slides</a>--></td>
@@ -483,7 +483,7 @@
                           <th scope="row">27 Oct, 2021</th>
                           <td>L12</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>14:00</td>
+                          <td>14:15</td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=697349">Video</a>--></td>
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/1ST7MdeyZJBRzcHQw-MjxBpOkH82tkNzX/view?usp=sharing">Slides</a>--></td>
@@ -506,7 +506,7 @@
                           <th scope="row">3 Nov, 2021</th>
                           <td>L13</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:00</td>
+                          <td>11:15</td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=721873">Video</a>--></td>
                           <td> - </td>
@@ -517,7 +517,7 @@
                           <th scope="row">8 Nov, 2021</th>
                           <td>L14</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>14:00</td>
+                          <td>14:15</td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=721889">Video</a>--></td>
                           <td> - </td>
@@ -528,7 +528,7 @@
                           <th scope="row">10 Nov, 2021</th>
                           <td>L15</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:00</td>
+                          <td>11:15</td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=721913">Video 1</a>, <a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=721941">Video 2</a>--></td>
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/1JKHqnH4eTQgsT3ei-L0Tiygeq286YU1j/view?usp=sharing">Slides</a>--></td>
@@ -562,7 +562,7 @@
                           <th scope="row">17 Nov, 2021</th>
                           <td rowspan="1">L17</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:00</td>
+                          <td>11:15</td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=734913">Video</a>--></td>
                           <td><!--<a>Slides</a>--></td>
@@ -606,7 +606,7 @@
                           <th scope="row">24 Nov, 2021</th>
                           <td>L19</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:00</td>
+                          <td>11:15</td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=746397">Video</a>--></td>
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/18o2PPHqP-63DDR5udXKBSf53QC92VaO-/view?usp=sharing">Slides</a>--></td>
@@ -628,7 +628,7 @@
                           <th scope="row">01 Dic, 2021</th>
                           <td>L21</td>
                           <td style="text-align: center;"><span class="label label-warning"></span></td>
-                          <td>11:00</td>
+                          <td>11:15</td>
                           <td> ? </td>
                           <td> </td>
                           <td> </td>
@@ -639,7 +639,7 @@
                           <th scope="row">6 Dec, 2021</th>
                           <td>L22</td>
                           <td style="text-align: center;"><span class="label label-warning"></span></td>
-                          <td>14:00</td>
+                          <td>14:15</td>
                           <td> ? </td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=762885">Video</a>--></td>
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/1iOC_Qg7sabrn1KjrhHu8QTQz3NgGxlex/view?usp=sharing">Slides</a>--></td>
@@ -662,7 +662,7 @@
                           <th scope="row">8 Dec, 2021</th>
                           <td>L23</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:00</td>
+                          <td>11:15</td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=776105">Video</a>--></td>
                           <td> - </td>
@@ -673,7 +673,7 @@
                           <th scope="row">13 Dec, 2021</th>
                           <td>L24</td>
                           <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:00</td>
+                          <td>11:15</td>
                           <td></td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=776109">Video</a>--></td>
                           <td> - </td>
