updating timestamp and Slides 29-Sept of Marco.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="font-size:110%;">Last modification: September 28th, 2021 09:30</p>
+                    <p style="font-size:110%;">Last modification: October 4th, 2021 11:00</p>
                 </div>
             </div>
         </div>
@@ -340,8 +340,8 @@
                         </tr>
 
                         <tr>
-                          <th scope="row" rowspan="2">27 Sep, 2021</th>
-                          <td rowspan="2">L3</td>
+                          <th scope="row" rowspan="1">27 Sep, 2021</th>
+                          <td rowspan="1">L3</td>
                           <td style="text-align: center;"><!--<span class="label label-info">Async</span>--></td>
                           <td> - </td>
                           <td> - </td>
@@ -350,15 +350,17 @@
                           <td>Why Human Behaviour? Why diversity? From a computer science perspective.</td>
                           <td>F. Giunchiglia</td>
                         </tr>
+                        <!--
                         <tr>
-                          <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
+                          <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>12:30</td>
                           <td></td>
-                          <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=632277">Video</a>--></td>
-                          <td><!--<a target="_blank" href="https://drive.google.com/file/d/1O7UwQkVCjlZC-LQKnd_MqzN9RGUNtBTk/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1nNFnXWYSM2QITpBTpoYRQyKn8Jkjbd4P?usp=sharing">Material</a>--></td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=632277">Video</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1O7UwQkVCjlZC-LQKnd_MqzN9RGUNtBTk/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1nNFnXWYSM2QITpBTpoYRQyKn8Jkjbd4P?usp=sharing">Material</a></td>
                           <td>Group formation, instructions and How to do a literature review.</td>
                           <td>M. Chierici</td>
                         </tr>
+                        -->
                         <tr>
                           <th scope="row" rowspan="2">29 Sep, 2021</th>
                           <td rowspan="2">L4</td>
@@ -371,8 +373,8 @@
                           <td>I. Bison</td>
                         </tr>
                         <tr>
-                          <td><!--<a target="_blank" href="https://drive.google.com/file/d/1SyWzw7wotQeXiyOntWOPhqNELGy0rqPZ/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1T7R-Z9j2D1FUcBVh7PCKBHQaC4jloRz2?usp=sharing">Material</a>--></td>
-                          <td>How to write a research project 1st Part.</td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1BnUtkO02E6e_Doby3_yENSLDg6l9_mFJ/view?usp=sharing">Slides</a> <!--, <a target="_blank" href="https://drive.google.com/drive/folders/1T7R-Z9j2D1FUcBVh7PCKBHQaC4jloRz2?usp=sharing">Material</a>--></td>
+                          <td>How to do a literature review. How to write a research project (1st part).</td>
                           <td>M. Chierici</td>
                         </tr>
                         <tr>
