--- a/index.html
+++ b/index.html
@@ -115,6 +115,17 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-2">
+                    <p>Calendar and presentation links updated!</p>
+                </div>
+                <div class="col-lg-4">
+                    <p style="font-size:110%;">October 19th, 2021 23:00</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-lg-offset-2">
                     <p>Website online!</p>
                 </div>
                 <div class="col-lg-4">
@@ -155,7 +166,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="font-size:110%;">Last modification: October 4th, 2021 11:00</p>
+                    <p style="font-size:110%;">Last modification: October 19th, 2021 23:00</p>
                 </div>
             </div>
         </div>
@@ -175,8 +186,6 @@
                     <p>The Fall 2021 Edition of the course Studies on Human Behaviour is delivered in the classrooms. We will also provide some complementary asynchonous material</p>
                     <p>&nbsp;</p>
                     <p>The idea behind this course is that the students do most of the work during the course duration (up to December) because we believe this should yield considerably better results.</p>
-                    <!--
-                    <p>The Fall 2021 Edition of the course Studies on Human Behaviour is delivered remotely, due to the current circumstances. The format is mixed, with some lessons delivered synchronously and some asynchronously. You will find <!--<span class="label label-danger">Sync</span>--> and <!--<span class="label label-info">Async</span>--> tags in each lesson in the calendar.</p>
                     <p>&nbsp;</p>
                     <p>A <b>synchronous</b> lesson is taught in real-time, with the professor and the class, via Zoom. All synchronous lectures will be recorded and made available on Moodle and on this website.</p>
 
@@ -389,42 +398,31 @@
                           <td>I. Bison</td>
                         </tr>
                         <tr>
-                          <td><!--<a target="_blank" href="https://drive.google.com/file/d/1W06cwy21yqsoZTCkarpkOhvc4vsQm-BE/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1TGzM3Ohr8a4DeyXuuTgq-vUcJeQUeFMx?usp=sharing">Material</a>--></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1y3OHSlEKCyi-DMrqHQDDXJuxToThQ1m5/view?usp=sharing">Slides</a> <!--<a target="_blank" href="https://drive.google.com/drive/folders/1TGzM3Ohr8a4DeyXuuTgq-vUcJeQUeFMx?usp=sharing">Material</a>--></td>
                           <td>How to prepare a questionnaire and how to write a research project 2nd Part.</td>
                           <td>M. Chierici</td>
                         </tr>
                         <tr>
-                          <th scope="row">6 Oct, 2021</th>
+                          <th scope="row">11 Oct, 2021</th>
                           <td>L6</td>
                           <td style="text-align: center;"><!--<span class="label label-info">Async</span>--></td>
                           <td> 14:15 </td>
                           <td> - </td>
                           <td><!--a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=644633">Video</a>--></td>
-                          <td><!--<a target="_blank" href="https://drive.google.com/file/d/1Ck-rmU6huYRZNWtRXmRbvMOxKTCkL6y5/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/file/d/1MH5CWfw6BKebQhysOcd9Q1ebnjsW4hWA/view?usp=sharing">i-Log video</a>--></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/178TOZydbKHnxwS-Mm4fYUhDsHsjYRT1U/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/file/d/1AUrREArqEHNFKjffk1Q4GhYNgXSc3Xmf/view?usp=sharing">i-Log video</a></td>
                           <td>Methods and tools for data collection. Passive data: smartphones or other devices.</td>
                           <td>M. Rodas</td>
                         </tr>
                         <tr style="background-color: lightblue">
-                          <th scope="row">7 Oct, 2021</th>
+                          <th scope="row">13 Oct, 2021</th>
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
-                          <td>i-Log data collection starts.</td>
+                          <td>iLog data collection starts.</td>
                           <td> - </td>
-                        </tr>
-                        <tr style="background-color: lightpink">
-                          <th scope="row">11 Oct, 2021</th>
-                          <td>L7</td>
-                          <td style="text-align: center;"><!--<span class="label label-danger">Sync</span>--></td>
-                          <td>11:15</td>
-                          <td> - </td>
-                          <td> - </td>
-                          <td> - </td>
-                          <td>Students Q/A</td>
-                          <td>I. Bison, F. Giunchiglia, M. Chierici, M. Rodas</td>
                         </tr>
                         <tr style="background-color: lightpink">
                           <th scope="row">13 Oct, 2021</th>
@@ -455,20 +453,9 @@
                           <td> - </td>
                           <td> - </td>
                           <td><!--<a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=658657">Video</a>--></td>
-                          <td><!--<a target="_blank" href="https://drive.google.com/file/d/1odf7M84aRovUL01OzGNH0yy_tq7cd3iz/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/139VBA3glmvSqVC-LB4eF0ZiqIIezmgSc?usp=sharing">Material</a>--></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1odf7M84aRovUL01OzGNH0yy_tq7cd3iz/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1xspS53I0jtwafmXJoFnyCaQBEJD55wSe?usp=sharing">Material</a></td>
                           <td>Instruments for data collection. Capture in-the-time data (diachronic and streaming data).</td>
                           <td>M. Rodas</td>
-                        </tr>
-                        <tr style="background-color: lightblue">
-                          <th scope="row">21 Oct, 2021</th>
-                          <td> - </td>
-                          <td> - </td>
-                          <td> - </td>
-                          <td> - </td>
-                          <td> - </td>
-                          <td> - </td>
-                          <td>i-Log data collection ends.</td>
-                          <td> - </td>
                         </tr>
                         <tr>
                           <th scope="row">25 Oct, 2021</th>
@@ -480,6 +467,17 @@
                           <td><!--<a target="_blank" href="https://drive.google.com/file/d/1aJ01k-yr2KeeaL_-D4mXQ1pLfe72E5HZ/view?usp=sharing">Slides</a>--></td>
                           <td>Sample design, sampling, and Field Experiment.</td>
                           <td>I. Bison</td>
+                        </tr>
+                        <tr style="background-color: lightblue">
+                            <th scope="row">27 Oct, 2021</th>
+                            <td> - </td>
+                            <td> - </td>
+                            <td> - </td>
+                            <td> - </td>
+                            <td> - </td>
+                            <td> - </td>
+                            <td>iLog data collection ends.</td>
+                            <td> - </td>
                         </tr>
                         <tr>
                           <th scope="row">27 Oct, 2021</th>
