--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <p>Calendar and presentation links updated!</p>
                 </div>
                 <div class="col-lg-4">
-                    <p style="font-size:110%;">October 19th, 2021 23:00</p>
+                    <p style="font-size:110%;">November 1st, 2021 22:00</p>
                 </div>
                 <div class="col-lg-4">
                     <p>&nbsp;</p>
@@ -166,7 +166,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="font-size:110%;">Last modification: October 19th, 2021 23:00</p>
+                    <p style="font-size:110%;">Last modification: November 1st, 2021 22:00</p>
                 </div>
             </div>
         </div>
